# game

./: .gitignore  .gitmodules  BLADE_ROOT  README.md
24point/: 24_point_game.cpp  24_point_game.h  24_point_solution.cpp  24_point_solution.h  BUILD  generate_question.cpp  generate_question.h  main.cpp  main2.cpp  makefile  math_from_string.cpp  math_from_string.h  solver  test
console/Friday/: CMakeLists.txt  add_card_skill.h  aging_card.h  card.h  card_base.h  chanllange_card.h  combat_card.h  common.h  destroy_card_skill.h  foresee_card_skill.h  friday_game.cpp  half_card_skill.h  hp_change_skill.h  imitate_card_skill.h  phase_card.h  price_change_skill.h  rest_assemble_skill.h  skill_base.h  stop_instant_card_skill.h
console/Friday/element/card/: pirate_card.h
console/Friday/element/skill/: aging_accumulation_skill.h  ban_highest_card_skill.h  bury_card_skill.h  ce_change_skill.h  duplicate_card_skill.h  exchange_card_skill.h  hp_change_skill.h  phase_reduce_skill.h
console/Friday/include/: usr_interact.h
console/Friday/src/: friday_game.cpp  usr_interact.cpp
console/Friday/state/: HP_state.h  card_library.h  friday_state.h
